--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mdbootstrap": "^4.5.1",
     "mongodb": "^3.0.7",
     "mongoose": "^5.0.15",
+    "ng-drag-drop": "^4.0.1",
     "nodemon": "^1.17.3",
     "router": "^1.3.2"
   },
